@@ -1,2 +1,9 @@
 # Java21-for-backend-developers-code
 《写给后端开发者的Java21手册》源码项目
+
+Java21下载地址：https://jdk.java.net/21/
+大部分demo都是基于Java21构建的单文件程序，如果当前IDE不支持运行，可以使用命令行编译运行。
+命令行编译运行示例：
+```
+/{java21-path}/jdk-21.jdk/Contents/Home/bin/java --enable-preview --release 21 XXX.java
+```
